style.css
/* ... */
:dark {
--bg:rgba(24, 26, 28, 1);
--bgsub: #1C1E1F;
}
body{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Nunito Sans', sans-serif;
    background: var(--background);
    scroll-behavior: smooth;
}


::-webkit-scrollbar {
    width: 1px;
}

::-webkit-scrollbar-track {
    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
}

::-webkit-scrollbar-thumb {
    background-color: darkgrey;
    outline: 1px solid slategrey;
}
main{
    width: 100%;
    height: 100%;
}


@media screen and (max-width: 2000px) {
.container{
    width: 1600px;
    margin: auto;

background-color: white;
height: 100vh;
    display: flex;
    
}
}
@media only screen and (min-width: 2000px) and (max-width: 3200px)  {
    .container{
        width: 1800px;
        margin: auto;
    
    background-color: white;
    height: 100vh;
        
    }
    }

    @media only screen and (min-width: 3800px) and (max-width: 8000px)  {
        .container{
            width: 3500px;
            margin: auto;
        
        background-color: white;
        height: 100vh;
            
        }
        }

@media screen and (max-width: 1600px) {
    .container{
        width: 100%;
        margin: auto;
   
        background-color: white;
    height: 100vh;
        
    }
    }


    .sidebar{
        width: 30%;
        background-color: var(--background);
        border-right: 1px solid var(--line);
        height: 100%;
        display: flex;
        flex-direction: column;
      
    }

    .chatbody{
        width: 100%;
        display: flex;
        height: 100%;
   
    }

 
    .chatdata {
        overflow-y: auto;
        width: 100%;
padding: 12px;
display: flex;
flex-direction: column;
gap:   15px;
scroll-behavior: smooth;
transition: 0.2s;
    }
#chatContainer{
    width: 100%;
    display: flex;
    flex-direction: column;
    gap:   15px;  
}
    .roomdetails{
        margin-top: -5px;
        display: flex;
        align-items: center;
        gap: 3px;
        width: 100%;
    }
.rname{
    display: flex;
    flex-direction: column;
    width: 100%;
}

.smalls{
    margin-top: -1px;
}

.joinbtn{
    width:40%;
    height: 100%;
}
.col{
    display: flex;
    flex-direction: column;
    width: 100%;
}
.roomname button{
    width:100%;
    padding: 9px;
    outline: none;
    color: #FFF;
    height: 100%;
text-align: center;
font-size: 13.83px;
border: 1px solid #1a3f5d;
border-radius: 3px;
font-style: normal;
font-weight: 500;
line-height: 20.126px; /* 135.714% */
padding: 4px 17.711px;
background-color: #1a3f5d;
cursor: pointer;
} 

.roomname .sendbtn button {
    background-color: var(--sendbtn);
    border: 1px solid  var(--sendbtn); 
}

.roomname .recbtn button{
    background-color: var(--backgrounddark);
    border: 1px solid  var(--background); 
    
}
.rname{
    -webkit-line-clamp: 1;
    -webkit-box-orient: vertical;

    display: -webkit-box;
    overflow: hidden;
    overflow-wrap: break-word;
width: 100%;
text-transform: capitalize;
font-size: 13.711px;
font-style: normal;
font-weight: 600;
line-height: 19.185px; /* 166.667% */

}

.smalls{
    -webkit-line-clamp: 1;
    -webkit-box-orient: vertical;
    display: -webkit-box;
    overflow: hidden;
    overflow-wrap: break-word;
    text-transform: capitalize;
    line-height: normal;
    font-weight: 300;
    font-family: 'Nunito Sans', sans-serif;

    
}
.invitetitle{
    font-weight: 600;
    text-transform: capitalize;
    color: var(--black_70);
}
.messagerec .invitetitle{
    color: var(--culturedtwo);
}

    .roomname{
        display: flex;
     gap: 5px;
        width: 100%;
        align-items: flex-end;
    }
    .mediaextradata{
        overflow-y: auto;
        width: 100%;
        display: flex;
        flex-direction: column;
        gap: 10px;  
    }

    .chatcontainer{
        width: 100%;
        height: 100%;
        display: flex;
        flex-direction: column;
        border-right: 1px solid var(--line);
    }
    .snd{
       padding:7px;
       border-radius: 5px;
       background-color: var(--backgrounddark);
  
        
    }
.messagesent{
    max-width: 67%;
    display: flex;
    width: fit-content;
    margin-left: auto;
    flex-direction: row-reverse;
}

.messagerec{
    max-width: 65%;
    display: flex;
width: fit-content;
    
}
.edgecontrol{
    width: 16px;
    height: 24px;
    
}

.messagerec .chatbubble{
    display: flex;
padding: 8px;
align-items: flex-start;
gap: 10px;
background-color: var(--UI-Dark-02);
display: flex;
flex-direction: column;
color: var(--culturedtwo);
border-radius: 0px 4px 4px 4px;
/* Body 2 */
font-family: Nunito Sans;
font-size: 14px;
font-style: normal;
font-weight: 400;
line-height: 20px; /* 142.857% */
}

.chatimg{
    width: 100%;
    height:100% ;
    max-height: 350px;
    overflow: hidden;

}
.imgmsg .chatbubble{
min-width: 50%;
}

.chatdate{
    color: var(--Text-Secondary);
text-align: center;

/* Caption 1 */
font-family: Nunito Sans;
font-size: 12px;
font-style: normal;
font-weight: 400;
line-height: 18px; /* 150% */
}
.chatimg img{
    width: 100%;
    height:100% ;
    transition: 3s all ease;
    object-fit: cover;
    object-fit: cover;
    object-position: top;
}
.overlay{
    background-color: rgba(0, 0, 0, 0.6);
    position: fixed;
    backdrop-filter: blur(1px);
    bottom: 0;
    left: 0;
    right: 0;
    top: 0;
    z-index: 99;
    align-items: center;
    display: none;
}

.mySwiper-container{
    height: 100vh;
    background-color: rgba(0, 0, 0, 0.3);
  position: fixed;
  backdrop-filter: blur(1px);
  bottom: 0;
  left: 0;
  right: 0;
  top: 0;
  z-index: 9999;
  align-items: center;
  display: none;
    
  }


  .swiper {
    width: 100%;
    height: 100%;
  }
/* ... */

